--- a/Thor.html
+++ b/Thor.html
@@ -8,6 +8,6 @@
 Sam Raimi first developed the concept of a film adaptation based on Thor in 1991, but soon abandoned the project, leaving it in "development hell" for several years. During this time, the rights were picked up by various film studios until Marvel signed Mark Protosevich to develop the project in 2006, and planned to finance and release it through Paramount. Matthew Vaughn was assigned to direct the film for a tentative 2010 release. However, after Vaughn was released from his holding deal in 2008, Branagh was approached and the film's release was rescheduled to 2011. The main characters were cast in 2009, and principal photography took place in California and New Mexico from January to May 2010. The film was converted to 3D in post-production.
 Thor premiered in Sydney on April 17, 2011, and was released in the United States on May 6, as part of Phase One of the MCU. The film was a financial success, earning $449.3 million worldwide. Critics praised the performances, characters, themes and special effects but criticized the plot. Two sequels have been released: Thor: The Dark World (2013) and Thor: Ragnarok (2017). A fourth film, Thor: Love and Thunder, is scheduled to be released in July 2022.
 <br><br>
-   <a href="href2.html#contents">Back to top</a><br /><br /></p>  
+   <a href="index.html#contents">Back to top</a><br /><br /></p>  
 </body>
 </html>
