--- a/captainamerica.html
+++ b/captainamerica.html
@@ -34,6 +34,6 @@
     1940s time period, and Johnston's direction. Two sequels have been released:
     Captain America: The Winter Soldier (2014) and Captain America: Civil War
     (2016).<br /><br />
-    <a href="href2.html#contents">Back to top</a><br /><br /></p>
+    <a href="index.html#contents">Back to top</a><br /><br /></p>
 </body>
 </html>
