--- a/hulk.html
+++ b/hulk.html
@@ -49,6 +49,6 @@
       the limited series What If...?. Ruffalo will reprise the role in the
       upcoming Disney+ series She-Hulk (2022)
     <br /><br />
-    <a href="href2.html#contents">Back to top</a><br /><br /></p>
+    <a href="index.html#contents">Back to top</a><br /><br /></p>
 </body>
 </html>
