--- a/ironman.html
+++ b/ironman.html
@@ -36,6 +36,6 @@
     and received two nominations at the 81st Academy Awards for Best Sound
     Editing and Best Visual Effects. Two sequels have been released: Iron Man 2
     (2010) and Iron Man 3 (2013).<br /><br />
-    <a href="href2.html#contents">Back to top</a><br /><br /></p>
+    <a href="index.html#contents">Back to top</a><br /><br /></p>
 </body>
 </html>
